<resources>
    <string name="app_name">drop</string>
    <string name="emails">Email address</string>
    <string name="forgot">Forgot</string>
    <string name="forgot2">Password?</string>
    <string name="f">Forgot Password?</string>
    <string name="text3">Enter your Email address to proceed</string>
    <string name="verify">Verify</string>
    <string name="login">Login</string>
    <string name="text1">Please enter your login details to sign in</string>
    <string name="password">Password</string>
    <string name="button">Log in</string>
    <string name="user">New user?</string>
    <string name="sign">Sign up</string>
    <string name="google">Login with</string>
    <string name="g">Google</string>
    <string name="details">Request details</string>
    <string name="name">Selena Gomez</string>
    <string name="time"> Posted 1 hr ago</string>
    <string name="location"> Chennai</string>
    <string name="blood">Blood Group Request</string>
    <string name="bg">O+ve</string>
    <string name="units">Required units</string>
    <string name="u">2 units</string>
    <string name="hosp">Hospital Name</string>
    <string name="hospname">Rainy Hospital, Chennai</string>
    <string name="desc">Request Description</string>
    <string name="description">My friend Ankita faced a severe accident today morning at OMR road and she’s lost a lot of blood. Doctors advised us to collect blood units immediately which will help my friend to recover soon. If anything to contact me regarding this, call me @ 9383469321. Please do the needful!!</string>
    <string name="contact">Contact Details</string>
    <string name="number">+91 9383469321</string>
    <string name="bt">Donate Blood</string>
    <string name="congod">We’ll notify your donation response!
        Meanwhile reach out to the hospital to donate your blood</string>
    <string name="donid">Donation ID : AB2567FQ</string>
    <string name="bt2">Back to home</string>
    <string-array name="username">
        <item>Sophia</item>
        <item>David John</item>
        <item>Karthik N M</item>
        <item>Selena Gomez</item>
    </string-array>
    <string-array name="Address">
        <item>Rainy Hospital, chennai</item>
        <item>Apollo Hospital, chennai</item>
        <item>Apollo Hospital, chennai</item>
        <item>Rainy Hospital, chennai</item>
    </string-array>
    <string-array name="time">
        <item>Posted an hour ago</item>
        <item>Posted 1 hrs ago</item>
        <item>Posted 2 hrs ago</item>
        <item>Posted an hour ago</item>
    </string-array>
    <string-array name="units">
        <item>Required : 2 units</item>
        <item>Required : 1 units</item>
        <item>Required : 1 units</item>
        <item>Required : 2 units</item>
    </string-array>
    <string-array name="Bloodgroup">
        <item>O+ve</item>
        <item>0-ve</item>
        <item>B+ve</item>
        <item>O+ve</item>
    </string-array>
    <string-array name="name">
        <item>Sophia</item>
        <item>David John</item>
        <item>Selena Gomez</item>
    </string-array>
    <string-array name="location">
        <item>Rainy Hospital, chennai</item>
        <item>Apollo Hospital, chennai</item>
        <item>Rainy Hospital, chennai</item>
    </string-array>
    <string-array name="timing">
        <item>Requested on 2/3/2023</item>
        <item>Requested on 2/5/2023</item>
        <item>Requested on 5/6/2023</item>
    </string-array>
    <string-array name="unitsgiven">
        <item>Requested 2 units</item>
        <item>Requested 1 units</item>
        <item>Requested 1 units</item>
    </string-array>
    <string-array name="bg">
        <item>O+ve</item>
        <item>0-ve</item>
        <item>B+ve</item>
    </string-array>
    <string-array name="blood_groups">
        <item>O+</item>
        <item>O-</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>