<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".donation1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="25dp"
                android:orientation="horizontal">
                <TextView
                    style="@style/viewParent.headerText"
                    android:id="@+id/back"
                    android:drawableLeft="@drawable/baseline_arrow_back_24"/>
                <TextView
                    style="@style/viewParent.headerText"
                    android:text=" Request Details" />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardView"
                            android:layout_width="101.85dp"
                            android:layout_height="101.85dp"
                            android:layout_marginTop="20dp"
                            android:layout_centerInParent="true">

                            <ImageView
                                android:id="@+id/prof"
                                android:src="@drawable/pro"
                                android:layout_width="101.85dp"
                                android:layout_height="101.85dp"
                                android:scaleType="centerCrop" />
                        </androidx.cardview.widget.CardView>
                        <TextView
                            android:text="@string/name"
                            android:textColor="@color/black"
                            android:layout_marginTop="5dp"
                            android:textStyle="bold"
                            android:layout_marginStart="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/time"
                            android:drawableStart="@drawable/loc"
                            android:text="@string/time"
                            android:textColor="#4B4B4B"
                            android:layout_marginTop="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/location"
                            android:textColor="#4B4B4B"
                            android:layout_marginLeft="3dp"
                            android:drawableStart="@drawable/time"
                            android:text= " Chennai"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="197dp"
                        android:layout_height="170dp"
                        android:orientation="vertical"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/pinkbg">
                        <TextView
                            android:id="@+id/blood"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/blood"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/bg"
                            android:layout_width="wrap_content"
                            android:layout_marginStart="10dp"
                            android:textColor="#EF233C"
                            android:layout_height="wrap_content"
                            android:text="@string/bg"/>
                        <TextView
                            android:id="@+id/unit"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/units"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/u"
                            android:textColor="#EF233C"
                            android:layout_marginStart="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/u"/>
                        <TextView
                            android:id="@+id/hosp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hosp"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/hospname"
                            android:textColor="#EF233C"
                            android:layout_marginStart="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hospname"/>

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>
            <TextView
                android:id="@+id/desc"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="25dp"
                android:textColor="@color/black"
                android:text="@string/desc"/>
            <TextView
                android:id="@+id/description"
                android:layout_marginTop="10dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="7"
                android:text="@string/description"/>
            <TextView
                android:id="@+id/contact"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="25dp"
                android:textColor="@color/black"
                android:text="@string/contact"/>
            <TextView
                android:id="@+id/number"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="25dp"
                android:text="@string/number"/>
            <Button
                android:id="@+id/bt"
                android:layout_marginTop="60dp"
                android:layout_gravity="center"
                android:layout_width="303dp"
                android:layout_height="59dp"
                android:onClick="donateblood"
                android:text="@string/bt" />

        </LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu"/>






</androidx.constraintlayout.widget.ConstraintLayout>