<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="100sp"
        android:layout_marginEnd="71sp"
        android:layout_marginBottom="391sp"
        android:text="@string/forgot"
        android:textColor="#EF233C"
        android:textSize="41sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgot2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="237sp"
        android:layout_marginEnd="71sp"
        android:layout_marginBottom="391sp"
        android:text="@string/forgot2"
        android:textColor="#EF233C"
        android:textSize="41sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20sp"
        android:text="@string/text3"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot2"/>

    <EditText
        android:id="@+id/emails"
        android:layout_width="367dp"
        android:layout_height="64dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:autofillHints="emailAddress"
        android:hint="@string/emails"
        android:inputType="textEmailAddress"
        android:paddingLeft="18sp"
        android:paddingRight="18sp"
        android:textColorHint="#EA9696"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text3"/>

    <Button
        android:id="@+id/verify"
        android:layout_width="320dp"
        android:layout_height="61dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/button"
        android:text="@string/verify"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emails"
        app:layout_constraintVertical_bias="0.117"/>
</androidx.constraintlayout.widget.ConstraintLayout>